changed images url

--- a/Aircraft.html
+++ b/Aircraft.html
@@ -36,7 +36,7 @@
                 </div>
         <div class="Aircraft_body">
             <div class="Aircraft_slideshow">
-                <img src="D:/websites/NW/images/Images/aviation_edited2.jpg" alt="aircraft background render failed" />
+                <img src="/images/Images/aviation_edited2.jpg" alt="aircraft background render failed" />
                 <div class="Aircraft_slideshow_text">
                     <h1>Ready to fly with state-of-art propulsion system?</h1><br><br>
                     <h2>Indulge your aircraft with cutting-tech propulsion systems.</h2>
