--- a/UAV.html
+++ b/UAV.html
@@ -62,7 +62,7 @@
         </nav>
         <div class="UAV_body">
             <div class="UAV_slideshow">
-                <img src="D:/websites/NW/images/UAV/UAV_all.png" alt="UAV background render failed" />
+                <img src="/images/UAV/UAV_all.png" alt="UAV background render failed" />
                 <div class="UAV_slideshow_text">
                     <h1>Ready to fly with state-of-art propulsion system?</h1><br><br>
                     <h2>Indulge your UAV with cutting-tech propulsion systems.</h2>
