--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- INTRODUCTION -->
         <div class="intro">
             <div class="intro_img">
-                <img src="D:/websites/NW/images/Images/intro1.jpeg" alt="intro pic"/>
+                <img src="/images/Images/intro1.jpeg" alt="intro pic"/>
             </div>
             <div class="intro_text">
                 <h1>Ready to take your Aviation journey to next level?</h1>
